uploaded meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,48 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/kitchenbookfavicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kitchen Recipe Book</title>
+    <!-- Primary Meta Tags -->
+    <title>Expand Your Culinary Horizons with Kitchen Book Recipe</title>
+    <meta
+      name="title"
+      content="Expand Your Culinary Horizons with Kitchen Book Recipe"
+    />
+    <meta
+      name="description"
+      content="If you love to cook and are always on the lookout for new recipes to try, you'll love Kitchen Book Recipe. Our web app makes it easy to search for recipes based on your preferences, so you can find the perfect dish for any occasion. From classic comfort foods to exotic international cuisines, Kitchen Book Recipe has something for everyone. Give it a try now and discover all the delicious possibilities!"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://kitchen-book-recipe.netlify.app/"
+    />
+    <meta
+      property="og:title"
+      content="Expand Your Culinary Horizons with Kitchen Book Recipe"
+    />
+    <meta
+      property="og:description"
+      content="If you love to cook and are always on the lookout for new recipes to try, you'll love Kitchen Book Recipe. Our web app makes it easy to search for recipes based on your preferences, so you can find the perfect dish for any occasion. From classic comfort foods to exotic international cuisines, Kitchen Book Recipe has something for everyone. Give it a try now and discover all the delicious possibilities!"
+    />
+    <meta property="og:image" content="/ogimage.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://kitchen-book-recipe.netlify.app/"
+    />
+    <meta
+      property="twitter:title"
+      content="Expand Your Culinary Horizons with Kitchen Book Recipe"
+    />
+    <meta
+      property="twitter:description"
+      content="If you love to cook and are always on the lookout for new recipes to try, you'll love Kitchen Book Recipe. Our web app makes it easy to search for recipes based on your preferences, so you can find the perfect dish for any occasion. From classic comfort foods to exotic international cuisines, Kitchen Book Recipe has something for everyone. Give it a try now and discover all the delicious possibilities!"
+    />
+    <meta property="twitter:image" content="/ogimage.png" />
   </head>
   <body>
     <div id="root"></div>
